objects/Login_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Login Details</relationshipLabel>
        <relationshipName>Login_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Instance__c</fullName>
        <label>Instance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sandbox</fullName>
                </value>
                <value>
                    <fullName>Production</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security_Token__c</fullName>
        <label>Security Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Username</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Login Detail</label>
    <listViews>
        <fullName>Accounts</fullName>
        <columns>NAME</columns>
        <columns>Username__c</columns>
        <columns>Password__c</columns>
        <columns>Security_Token__c</columns>
        <columns>Instance__c</columns>
        <columns>Account__c</columns>
        <filterScope>Mine</filterScope>
        <label>Accounts</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Login Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Login Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>